[package]
name = "mop3"
version = "1.2.2"
edition = "2021"
authors = ["Nathan Kiesman <nwk2103@columbia.edu>"]
license = "MIT"
description = "A Mastodon to POP3 gateway"
readme = "README.md"
homepage = "https://github.com/nkizz/mop3"
repository = "https://github.com/nkizz/mop3"
keywords = ["mastodon", "retrocomputing"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11.14", default_features = false, features = [ "rustls-tls" ,"blocking","multipart","json"] }
string_concat = "0.0.1"
html2text = "0.6.0"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
deunicode = "1.4.2"
mail-parser = "0.8.2"
mail-builder = "0.2.5"
serde = { version = "1.0.160", features = ["std", "derive"] }
fancy-regex = "0.12.0"
